horizontal scroll fixed

--- a/src/app/main-content/about-me/about-me.component.scss
+++ b/src/app/main-content/about-me/about-me.component.scss
@@ -3,7 +3,6 @@
 .about-me{
     @include dFlex();
     height: 100vh;
-    width: 100%;
     position: relative;
     top: 80px;
     background: none;
@@ -12,7 +11,6 @@
 .center-section{
     @include dFlex($fd: row, $ai: normal, $jc: space-around);
     height: 708px;
-    width: 1232px;
 }
 
 .me-box{
@@ -31,6 +29,10 @@
         height: 568px;
         border-radius: 30px;
         z-index: 5;
+    }
+
+    .me-img-shadow{
+        width: 568px;
     }
 }
 
