--- a/src/app/main-content/feeback/feeback.component.scss
+++ b/src/app/main-content/feeback/feeback.component.scss
@@ -2,7 +2,7 @@
 
 .feedback-content{
     @include dFlex();
-    width: 100%;
+    width: 90%;
 }
 
 h3{
