--- a/src/app/main-content/projects/projects.component.scss
+++ b/src/app/main-content/projects/projects.component.scss
@@ -2,7 +2,7 @@
 
 .projects-content{
     @include dFlex($ai: normal);
-    width: 90vw;
+    width: 90%;
     height: 565px;
     margin: 0px 0px 0px 72px;
 }
